# tinyblok

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.zig  build.zig.zon  guide.md  output.txt  partitions.csv  patchbay.edn  sdkconfig.defaults
docs/: install.html
docs/firmware/latest/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  creds.c  creds.h  drivers.c  ed25519.c  idf_component.yml  kernel.zig  main.zig  nats.c  patchbay.zig  rules.zig  sources.c  stub.c  tweetnacl.c  tx_ring.zig
main/c/: app_events.c  app_events.h  creds.c  display.c  display.h  display_font.h  drivers.c  nats.c  sources.c  stub.c  tinyblok_config.c  tinyblok_config.h  tinyblok_patchbay.c  tinyblok_patchbay.h  tinyblok_tx_ring.c  tinyblok_tx_ring.h  tinyblok_web.c  tinyblok_web.h  tinyblok_wifi.c  tinyblok_wifi.h  user.c
main/c/patchbay/: pb_arena.c  pb_arena.h  pb_builtins.c  pb_dump.c  pb_eval.c  pb_eval.h  pb_eval_internal.h  pb_json.c  pb_json.h  pb_program.c  pb_program.h  pb_sexpr.c  pb_sexpr.h  pb_soundcheck.c  pb_soundcheck.h  pb_validate.c  pb_validate.h  pb_window_builtins.c  router.h
main/rsrc/: captive.html  setup.html
main/zig/: bytes.zig  kernel.zig  main.zig  patchbay.zig  rules.zig  soundcheck.zig  tx_ring.zig  user.zig
secrets/: nats.creds.example
sites/flash/: index.html  manifest.json  stage-firmware.sh
tests/host/: nats_protocol_test.c  nats_smoke.c  patchbay_check.c
tests/host/include/: esp_log.h  sdkconfig.h
tests/host/include/lwip/: netdb.h  sockets.h
tools/: gen.py
